force-app/main/default/objects/Account/fields/Active_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Active_Leasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Leasing</label>
    <type>Checkbox</type>
</CustomField>