force-app/main/default/objects/Account/fields/Broker_commission__c.field-meta.xml
<CustomField>
    <fullName>Broker_commission__c</fullName>
    <label>Broker Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>