force-app/main/default/objects/Account/fields/Broker_info__c.field-meta.xml
<CustomField>
    <fullName>Broker_info__c</fullName>
    <label>Broker info</label>
    <length>50</length>
    <type>Text</type>
</CustomField>