force-app/main/default/objects/Account/fields/Contract_info__c.field-meta.xml
<CustomField>
    <fullName>Contract_info__c</fullName>
    <label>Contract info</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>