force-app/main/default/objects/Account/fields/Law_Firm_info__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_info__c</fullName>
    <label>Law Firm info</label>
    <length>50</length>
    <type>Text</type>
</CustomField>