force-app/main/default/objects/Account/fields/Leasing_amount__c.field-meta.xml
<CustomField>
    <fullName>Leasing_amount__c</fullName>
    <label>Leasing amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>