force-app/main/default/objects/Account/fields/Leasing_Period__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Period__c</fullName>
    <label>Leasing Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>