force-app/main/default/objects/Account/fields/Signed_Documents__c.field-meta.xml
<CustomField>
    <fullName>Signed_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Documents</label>
    <type>Checkbox</type>
</CustomField>