force-app/main/default/objects/Account/fields/Submit_for_approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit for approval</label>
    <type>Checkbox</type>
</CustomField>