force-app/main/default/objects/Account/fields/Tenanat_Account_type__c.field-meta.xml
<CustomField>
    <fullName>Tenanat_Account_type__c</fullName>
    <label>Account type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Tenant</fullName>
            </value>
            <value>
                <fullName>Corporate Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>